// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DEFAULT_STORAGE_BROWSER_DISPLAY_TEXT DEFAULT_STORAGE_BROWSER_DISPLAY_TEXT.CopyView should match snapshot 1`] = `
{
  "actionCancelLabel": "Cancel",
  "actionDestinationLabel": "Copy destination:",
  "actionExitLabel": "Exit",
  "actionSetDestination": "Set destination",
  "actionStartLabel": "Copy",
  "getActionCompleteMessage": [Function],
  "getFolderListResultsMessage": [Function],
  "getFolderSelectedMessage": [Function],
  "loadingIndicatorLabel": "Loading",
  "overwriteWarningMessage": "Copied files will overwrite existing files at selected destination.",
  "searchPlaceholder": "Search for folders",
  "statusDisplayCanceledLabel": "Canceled",
  "statusDisplayCompletedLabel": "Completed",
  "statusDisplayFailedLabel": "Failed",
  "statusDisplayQueuedLabel": "Not Started",
  "statusDisplayTotalLabel": "Total",
  "tableColumnCancelHeader": "",
  "tableColumnFolderHeader": "Folder",
  "tableColumnNameHeader": "Name",
  "tableColumnSizeHeader": "Size",
  "tableColumnStatusHeader": "Status",
  "tableColumnTypeHeader": "Type",
  "title": "Copy",
}
`;

exports[`DEFAULT_STORAGE_BROWSER_DISPLAY_TEXT DEFAULT_STORAGE_BROWSER_DISPLAY_TEXT.CreateFolderView should match snapshot 1`] = `
{
  "actionCancelLabel": "Cancel",
  "actionDestinationLabel": "Destination",
  "actionExitLabel": "Exit",
  "actionStartLabel": "Create folder",
  "folderNameLabel": "Enter folder name:",
  "folderNamePlaceholder": "Folder name",
  "getActionCompleteMessage": [Function],
  "getValidationMessage": [Function],
  "statusDisplayCanceledLabel": "Canceled",
  "statusDisplayCompletedLabel": "Completed",
  "statusDisplayFailedLabel": "Failed",
  "statusDisplayQueuedLabel": "Not Started",
  "statusDisplayTotalLabel": "Total",
  "tableColumnCancelHeader": "",
  "tableColumnFolderHeader": "Folder",
  "tableColumnNameHeader": "Name",
  "tableColumnSizeHeader": "Size",
  "tableColumnStatusHeader": "Status",
  "tableColumnTypeHeader": "Type",
  "title": "Create folder",
}
`;

exports[`DEFAULT_STORAGE_BROWSER_DISPLAY_TEXT DEFAULT_STORAGE_BROWSER_DISPLAY_TEXT.DeleteView should match snapshot 1`] = `
{
  "actionCancelLabel": "Cancel",
  "actionDestinationLabel": "Destination",
  "actionExitLabel": "Exit",
  "actionStartLabel": "Delete",
  "getActionCompleteMessage": [Function],
  "statusDisplayCanceledLabel": "Canceled",
  "statusDisplayCompletedLabel": "Completed",
  "statusDisplayFailedLabel": "Failed",
  "statusDisplayQueuedLabel": "Not Started",
  "statusDisplayTotalLabel": "Total",
  "tableColumnCancelHeader": "",
  "tableColumnFolderHeader": "Folder",
  "tableColumnNameHeader": "Name",
  "tableColumnSizeHeader": "Size",
  "tableColumnStatusHeader": "Status",
  "tableColumnTypeHeader": "Type",
  "title": "Delete",
}
`;

exports[`DEFAULT_STORAGE_BROWSER_DISPLAY_TEXT DEFAULT_STORAGE_BROWSER_DISPLAY_TEXT.LocationDetailView should have expected keys 1`] = `
{
  "getListResultsMessage": [Function],
  "loadingIndicatorLabel": "Loading",
  "searchExhaustedMessage": "Showing results for up to the first 10,000 items",
  "searchIncludeSubfoldersLabel": "Include subfolders",
  "searchPlaceholder": "Search current folder",
  "searchSubmitLabel": "Search",
  "tableColumnLastModifiedHeader": "Last modified",
  "tableColumnNameHeader": "Name",
  "tableColumnSizeHeader": "Size",
  "tableColumnTypeHeader": "Type",
  "title": [Function],
}
`;

exports[`DEFAULT_STORAGE_BROWSER_DISPLAY_TEXT DEFAULT_STORAGE_BROWSER_DISPLAY_TEXT.LocationsView should match snapshot 1`] = `
{
  "getDownloadLabel": [Function],
  "getListResultsMessage": [Function],
  "getPermissionName": [Function],
  "loadingIndicatorLabel": "Loading",
  "searchPlaceholder": "Filter folders and files",
  "searchSubmitLabel": "Search",
  "tableColumnActionsHeader": "Actions",
  "tableColumnBucketHeader": "Bucket",
  "tableColumnFolderHeader": "Folder",
  "tableColumnPermissionsHeader": "Permissions",
  "title": "Home",
}
`;

exports[`DEFAULT_STORAGE_BROWSER_DISPLAY_TEXT DEFAULT_STORAGE_BROWSER_DISPLAY_TEXT.UploadView should match snapshot 1`] = `
{
  "actionCancelLabel": "Cancel",
  "actionDestinationLabel": "Destination",
  "actionExitLabel": "Exit",
  "actionStartLabel": "Upload",
  "addFilesLabel": "Add files",
  "addFolderLabel": "Add folder",
  "getActionCompleteMessage": [Function],
  "overwriteExistingLabel": "Overwrite existing files",
  "statusDisplayCanceledLabel": "Canceled",
  "statusDisplayCompletedLabel": "Completed",
  "statusDisplayFailedLabel": "Failed",
  "statusDisplayOverridePreventedLabel": "Overwrite prevented",
  "statusDisplayQueuedLabel": "Not Started",
  "statusDisplayTotalLabel": "Total",
  "tableColumnCancelHeader": "",
  "tableColumnFolderHeader": "Folder",
  "tableColumnNameHeader": "Name",
  "tableColumnSizeHeader": "Size",
  "tableColumnStatusHeader": "Status",
  "tableColumnTypeHeader": "Type",
  "title": "Upload",
}
`;

exports[`DEFAULT_STORAGE_BROWSER_DISPLAY_TEXT should match snapshot 1`] = `
{
  "CopyView": {
    "actionCancelLabel": "Cancel",
    "actionDestinationLabel": "Copy destination:",
    "actionExitLabel": "Exit",
    "actionSetDestination": "Set destination",
    "actionStartLabel": "Copy",
    "getActionCompleteMessage": [Function],
    "getFolderListResultsMessage": [Function],
    "getFolderSelectedMessage": [Function],
    "loadingIndicatorLabel": "Loading",
    "overwriteWarningMessage": "Copied files will overwrite existing files at selected destination.",
    "searchPlaceholder": "Search for folders",
    "statusDisplayCanceledLabel": "Canceled",
    "statusDisplayCompletedLabel": "Completed",
    "statusDisplayFailedLabel": "Failed",
    "statusDisplayQueuedLabel": "Not Started",
    "statusDisplayTotalLabel": "Total",
    "tableColumnCancelHeader": "",
    "tableColumnFolderHeader": "Folder",
    "tableColumnNameHeader": "Name",
    "tableColumnSizeHeader": "Size",
    "tableColumnStatusHeader": "Status",
    "tableColumnTypeHeader": "Type",
    "title": "Copy",
  },
  "CreateFolderView": {
    "actionCancelLabel": "Cancel",
    "actionDestinationLabel": "Destination",
    "actionExitLabel": "Exit",
    "actionStartLabel": "Create folder",
    "folderNameLabel": "Enter folder name:",
    "folderNamePlaceholder": "Folder name",
    "getActionCompleteMessage": [Function],
    "getValidationMessage": [Function],
    "statusDisplayCanceledLabel": "Canceled",
    "statusDisplayCompletedLabel": "Completed",
    "statusDisplayFailedLabel": "Failed",
    "statusDisplayQueuedLabel": "Not Started",
    "statusDisplayTotalLabel": "Total",
    "tableColumnCancelHeader": "",
    "tableColumnFolderHeader": "Folder",
    "tableColumnNameHeader": "Name",
    "tableColumnSizeHeader": "Size",
    "tableColumnStatusHeader": "Status",
    "tableColumnTypeHeader": "Type",
    "title": "Create folder",
  },
  "DeleteView": {
    "actionCancelLabel": "Cancel",
    "actionDestinationLabel": "Destination",
    "actionExitLabel": "Exit",
    "actionStartLabel": "Delete",
    "getActionCompleteMessage": [Function],
    "statusDisplayCanceledLabel": "Canceled",
    "statusDisplayCompletedLabel": "Completed",
    "statusDisplayFailedLabel": "Failed",
    "statusDisplayQueuedLabel": "Not Started",
    "statusDisplayTotalLabel": "Total",
    "tableColumnCancelHeader": "",
    "tableColumnFolderHeader": "Folder",
    "tableColumnNameHeader": "Name",
    "tableColumnSizeHeader": "Size",
    "tableColumnStatusHeader": "Status",
    "tableColumnTypeHeader": "Type",
    "title": "Delete",
  },
  "LocationDetailView": {
    "getListResultsMessage": [Function],
    "loadingIndicatorLabel": "Loading",
    "searchExhaustedMessage": "Showing results for up to the first 10,000 items",
    "searchIncludeSubfoldersLabel": "Include subfolders",
    "searchPlaceholder": "Search current folder",
    "searchSubmitLabel": "Search",
    "tableColumnLastModifiedHeader": "Last modified",
    "tableColumnNameHeader": "Name",
    "tableColumnSizeHeader": "Size",
    "tableColumnTypeHeader": "Type",
    "title": [Function],
  },
  "LocationsView": {
    "getDownloadLabel": [Function],
    "getListResultsMessage": [Function],
    "getPermissionName": [Function],
    "loadingIndicatorLabel": "Loading",
    "searchPlaceholder": "Filter folders and files",
    "searchSubmitLabel": "Search",
    "tableColumnActionsHeader": "Actions",
    "tableColumnBucketHeader": "Bucket",
    "tableColumnFolderHeader": "Folder",
    "tableColumnPermissionsHeader": "Permissions",
    "title": "Home",
  },
  "UploadView": {
    "actionCancelLabel": "Cancel",
    "actionDestinationLabel": "Destination",
    "actionExitLabel": "Exit",
    "actionStartLabel": "Upload",
    "addFilesLabel": "Add files",
    "addFolderLabel": "Add folder",
    "getActionCompleteMessage": [Function],
    "overwriteExistingLabel": "Overwrite existing files",
    "statusDisplayCanceledLabel": "Canceled",
    "statusDisplayCompletedLabel": "Completed",
    "statusDisplayFailedLabel": "Failed",
    "statusDisplayOverridePreventedLabel": "Overwrite prevented",
    "statusDisplayQueuedLabel": "Not Started",
    "statusDisplayTotalLabel": "Total",
    "tableColumnCancelHeader": "",
    "tableColumnFolderHeader": "Folder",
    "tableColumnNameHeader": "Name",
    "tableColumnSizeHeader": "Size",
    "tableColumnStatusHeader": "Status",
    "tableColumnTypeHeader": "Type",
    "title": "Upload",
  },
}
`;
